--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,12 @@ python:
   - "3.2"
 
 env:
-  - MODULES="Django>=1.4,<1.5"
-  - MODULES="Django>=1.5,<1.6"
-  - MODULES="Django>=1.6,<1.7"
-  - MODULES="Django>=1.7,<1.8"
-
+#  - MODULES="Django>=1.4,<1.5"
+#  - MODULES="Django>=1.5,<1.6"
+#  - MODULES="Django>=1.6,<1.7"
+#  - MODULES="Django>=1.7,<1.8"
+  - MODULES="git+https://github.com/django/django.git@master#egg=django"
+  
 # Django 1.4 did not support Python 3.
 matrix:
   exclude:
